<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.cs246.rmgroup.testnotes.MainActivity">

    <TextView
        android:id="@+id/dateView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:textColor="@color/colorPrimary"
        android:paddingStart="10dp"
        android:paddingEnd="5dp"
        android:onClick="showDatePickerDialog"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true"
        android:background="@drawable/draw_back_top"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/day"
        android:layout_alignBottom="@+id/button"
        android:layout_alignParentStart="true"
        android:hint="@string/date_hint"
        android:layout_toStartOf="@+id/button" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/description"
        android:layout_alignBottom="@+id/button2"
        android:layout_alignParentStart="true"
        android:hint="@string/description_hint"
        android:layout_toStartOf="@+id/button2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New id"
        android:id="@+id/noteID"
        android:layout_alignBottom="@+id/button3"
        android:layout_alignParentStart="true"
        android:layout_alignTop="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New date"
        android:id="@+id/noteDay"
        android:layout_below="@+id/noteID"
        android:layout_alignParentStart="true"
        android:layout_alignEnd="@+id/button3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="New description"
        android:id="@+id/noteDescription"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentEnd="true" />



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_string"
        android:id="@+id/button"
        android:onClick="newNote"
        android:layout_alignParentTop="true"
        android:layout_alignEnd="@+id/button2" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/find_string"
        android:id="@+id/button2"
        android:onClick="lookupNote"
        android:layout_below="@+id/button"
        android:layout_alignParentEnd="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_string"
        android:id="@+id/button3"
        android:onClick="removeNote"
        android:layout_below="@+id/button2"
        android:layout_alignParentEnd="true" />

</RelativeLayout>
